--- a/Haraj_app/DetailPropertyTableViewCell.xib
+++ b/Haraj_app/DetailPropertyTableViewCell.xib
@@ -155,50 +155,21 @@
                         <frame key="frameInset" minY="468" width="375" height="159"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favourite" translatesAutoresizingMaskIntoConstraints="NO" id="spz-Ai-j4j">
-                                <frame key="frameInset" minX="31" minY="22" width="45" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="HighestPrice" translatesAutoresizingMaskIntoConstraints="NO" id="FlI-l5-Kkn">
-                                <frame key="frameInset" minX="279" minY="22" width="45" height="45"/>
+                                <frame key="frameInset" minX="165" minY="24" width="45" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Favorite Post" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pDX-1n-XlQ">
-                                <frame key="frameInset" minX="8" minY="67" width="105" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="SanFranciscoDisplay-Semibold" family="San Francisco Display" pointSize="15"/>
-                                <color key="textColor" red="0.1960784314" green="0.1960784314" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Expires In" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gIh-W1-dYf">
-                                <frame key="frameInset" minX="124" minY="67" width="105" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="SanFranciscoDisplay-Semibold" family="San Francisco Display" pointSize="15"/>
-                                <color key="textColor" red="0.1960784314" green="0.1960784314" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Highest Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vYg-RE-M19">
-                                <frame key="frameInset" minX="249" minY="67" width="105" height="36"/>
+                                <frame key="frameInset" minX="135" minY="69" width="105" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Semibold" family="San Francisco Display" pointSize="15"/>
                                 <color key="textColor" red="0.1960784314" green="0.1960784314" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$20000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i2h-Rq-Mnh">
-                                <frame key="frameInset" minX="249" minY="103" width="105" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$20000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i2h-Rq-Mnh">
+                                <frame key="frameInset" minX="82" minY="102" width="210" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Heavy" family="San Francisco Display" pointSize="18"/>
-                                <color key="textColor" red="0.0" green="0.56470588239999997" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Expires" translatesAutoresizingMaskIntoConstraints="NO" id="J3l-NE-1VO">
-                                <frame key="frameInset" minX="154" minY="22" width="45" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="21:00h" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afN-W4-avM">
-                                <frame key="frameInset" minX="124" minY="103" width="105" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="SanFranciscoDisplay-Heavy" family="San Francisco Display" pointSize="20"/>
                                 <color key="textColor" red="0.0" green="0.56470588239999997" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -211,7 +182,6 @@
                 <outlet property="detailinfoTextView" destination="5dR-nR-YDM" id="4gr-i9-jc9"/>
                 <outlet property="detailinfoTextView1" destination="sZs-u8-gEy" id="rqJ-KJ-NH6"/>
                 <outlet property="durationLabel" destination="4hl-1H-4oN" id="GAQ-Fy-HKi"/>
-                <outlet property="favouriteImage" destination="spz-Ai-j4j" id="Oqm-ye-IMm"/>
                 <outlet property="hashtagLabel" destination="nvr-P5-cht" id="5MW-bD-0Qs"/>
                 <outlet property="locationLabel" destination="E7G-hR-ohs" id="VWa-hY-PbV"/>
                 <outlet property="noOfBedroomsLabel" destination="lKN-Cl-K4y" id="F2a-AB-n8j"/>
@@ -221,7 +191,6 @@
                 <outlet property="propertySizeLabel" destination="Jj6-Q4-tMK" id="wOl-56-KLk"/>
                 <outlet property="propertyTypeLabel" destination="q9n-Dq-QtA" id="s7e-vh-X7m"/>
                 <outlet property="tapView" destination="mVg-AR-9Mg" id="ci6-ti-WW6"/>
-                <outlet property="timeLabel" destination="afN-W4-avM" id="J5a-tD-rZC"/>
                 <outlet property="titleLabel" destination="7di-m0-Po4" id="PWF-Mt-7us"/>
                 <outlet property="usernameLabel" destination="8J4-gr-6EV" id="Vt2-go-EJ6"/>
                 <outlet property="view_CordinateViewTapped" destination="dKs-b1-97w" id="n46-h3-rXo"/>
@@ -231,10 +200,8 @@
     </objects>
     <resources>
         <image name="Bedroom" width="56" height="31"/>
-        <image name="Expires" width="25" height="30"/>
-        <image name="Favourite" width="25" height="25"/>
         <image name="HighestPrice" width="29" height="29"/>
-        <image name="Location_on" width="19" height="26"/>
+        <image name="Location_on" width="41" height="55"/>
         <image name="Property1" width="53" height="47"/>
         <image name="defaultimg.jpg" width="200" height="200"/>
     </resources>
